reorganize people (on leave and alum)

--- a/_sass/people.scss
+++ b/_sass/people.scss
@@ -67,7 +67,7 @@
   }
 }
 
-#gallery-header, #alumni-header {
+#gallery-header, #alumni-header, #students-header {
   font-size: 1rem;
   color: $csail-orange;
   margin-bottom: 0.25em;
