add active project page to link to airtable

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -26,6 +26,8 @@
         &middot;
         <a href="/blogs" {% if page.collection == 'blogs' or page.title == 'Blogs' %}class="selected"{% endif %}>Blogs</a>
         &middot;
+        <a href="/projects" {% if page.title == 'Projects' %}class="selected"{% endif %}>Projects</a>
+        &middot;
         <a href="https://github.com/ScalingIntelligence">Code</a>
       </span>
 
