embed prelim lab projects

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -26,7 +26,7 @@
         &middot;
         <a href="/blogs" {% if page.collection == 'blogs' or page.title == 'Blogs' %}class="selected"{% endif %}>Blogs</a>
         &middot;
-        <a href="/projects" {% if page.title == 'Projects' %}class="selected"{% endif %}>Projects</a>
+        <a href="/openings" {% if page.title == 'Openings' %}class="selected"{% endif %}>Openings</a>
         &middot;
         <a href="https://github.com/ScalingIntelligence">Code</a>
       </span>
