first commit. Codebase cleaned.

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,11 +5,11 @@
         {% include logo.html %}
       </div>-->
       <div id="logo">
-        <img src="/imgs/logo.png" style="width: 50px;" alt="SAIL Logo" />
+        <img src="/imgs/MICHIGAN.png" style="width: 50px;" alt="SAIL Logo" />
       </div>
 
       <h1>
-        <span>Scaling Intelligence Lab</span> 
+        <span>   Social Computing Lab</span> 
       </h1>
     </a>
   </div>
@@ -28,7 +28,7 @@
         &middot;
         <a href="/openings" {% if page.title == 'Openings' %}class="selected"{% endif %}>Openings</a>
         &middot;
-        <a href="https://github.com/ScalingIntelligence">Code</a>
+        <a href="https://github.com/UMichHCI">Code</a>
       </span>
 
       <!-- <a href="https://github.com/ScalingIntelligence" class="external">
@@ -46,8 +46,8 @@
         </svg>
       </a> -->
 
-      <a href="https://ai.stanford.edu/" class="external">
-        <img src="/imgs/stanford_ai.png" alt="SAIL Logo" />
+      <a href="https://hcc.engin.umich.edu/" class="external">
+        <img src="/imgs/MICHIGAN.png" alt="SAIL Logo" />
       </a>
     </div>
   </div>
