--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -32,7 +32,7 @@
     {% assign person = site.data.people[author.key] %}
     {% capture affiliation %}
       {% if person %}
-        {{author.affiliation | default: person.affiliation | default: 'Stanford'}}
+        {{author.affiliation | default: person.affiliation | default: 'University of Michigan'}}
       {% else %}
         {{author.affiliation}}
       {% endif %}
@@ -94,7 +94,7 @@
                 <span class="name">{{author.name | default:person.name}}{% if author.equal %}*{% endif %}</span>
                 <span class="affiliation">
                   {% if person %}
-                    {{author.affiliation | default: person.affiliation | default: 'Stanford'}}
+                    {{author.affiliation | default: person.affiliation | default: 'University of Michigan'}}
                   {% else %}
                     {{author.affiliation}}
                   {% endif %}
