--- a/_layouts/pub.html
+++ b/_layouts/pub.html
@@ -23,7 +23,7 @@
     {% assign person = site.data.people[author.key] %}
     {% capture affiliation %}
       {% if person %}
-        {{author.affiliation | default: person.affiliation | default: 'Stanford'}}
+        {{author.affiliation | default: person.affiliation | default: 'University of Michigan'}}
       {% else %}
         {{author.affiliation}}
       {% endif %}
@@ -85,7 +85,7 @@
                 <span class="name">{{author.name | default:person.name}}{% if author.equal %}*{% endif %}</span>
                 <span class="affiliation">
                   {% if person %}
-                    {{author.affiliation | default: person.affiliation | default: 'Stanford'}}
+                    {{author.affiliation | default: person.affiliation | default: 'University ofMichigan'}}
                   {% else %}
                     {{author.affiliation}}
                   {% endif %}
