--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,11 +1,8 @@
 <div id="header" class="pure-g">
   <div class="pure-u-1 pure-u-md-1-2">
     <a id="wordmark" href="/">
-      <!--<div id="logo">
-        {% include logo.html %}
-      </div>-->
       <div id="logo">
-        <img src="/imgs/MICHIGAN.png" style="width: 50px;" alt="SAIL Logo" />
+        <img src="/imgs/MICHIGAN.png" alt="Michigan Logo" />
       </div>
 
       <h1>
